--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:db;MODE=MSSQLServer;DATABASE_TO_UPPER=FALSE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+    url: jdbc:h2:mem:test;MODE=MSSQLServer;DATABASE_TO_UPPER=FALSE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
     username: sa
     password: sa
     driverClassName: org.h2.Driver
@@ -8,3 +8,6 @@ spring:
     hibernate:
       ddl-auto: create-drop
     defer-datasource-initialization: true
+  sql:
+    init:
+      data-locations: classpath:sql/test-data.sql
